Add interactive cube editing